--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-scikit-learn==0.21.3
-nltk==3.4.5
-mlxtend==0.17.0
-matplotlib==3.0.3
-numpy==1.18.2
-pandas==0.24.2
-seaborn==0.9.0
+scikit-learn>=0.21.3
+nltk>=3.4.5
+mlxtend>=0.17.0
+matplotlib>=3.0.3
+numpy>=1.18.2
+pandas>=0.24.2
+seaborn>=0.9.0
